--- a/style.css
+++ b/style.css
@@ -1,129 +1,116 @@
 body {
-margin: 0px;
-font-family: 'Open Sans', sans-serif;
-background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%,
-rgba(227, 255, 248, 0.38) 100%);
-min-height: 100vh;
-
-}
-
-.page {
-width: 1000px;
-margin: 0 auto 0;
-padding-top: 65px;
-
-
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 55px;
- 
- 
-}
-
-ul {
-  list-style: none;
-  display: flex;
-  gap: 48px;
-  margin: 0px;
-  padding: 0px;
-  font-family: 'Mulish', sans-serif;
-}
-
-ul li a:hover {
-  font-weight: bold;
-  color: #1F1534;
-  opacity: 1;
-
-}
-
-ul li a {
-  opacity: 0.5;
-}
-
-
-
-a {
-  color: #1F1534;
-  text-decoration: none;
-}
-
-h1 {
-  font-family: 'Mulish', sans-serif;
-  font-size: 49px;
-  line-height: 56px;
-  font-weight: normal;
-  width: 490px;
-  color: #1F1534;
-}
-
-h1 span {
-  color:#89c5cc;
-  font-weight: bold;
-}
-
-main {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-section p {
-  font-size: 14px;
-  line-height: 28px;
-  color: #7D7987;
-  margin: 40px 0;
-}
-
-button {
-  /* propriedades de texto*/
-  text-transform: uppercase;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  color: #fff;
-
-  /*propriedade estrutural do botão*/
-  background-color:#69B99D;
-  padding: 16px 32px;
-  border-radius: 4px;
-  border: none;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-
+    margin: 0;
+    font-family: "Open Sans", sans-serif;
+    background: linear-gradient(90deg, rgb(227, 255, 248, 0) 82.08%, rgb(227, 255, 248, 0.38) 100%);
+    min-height: 100vh;
+  }
   
+  .page {
+    width: 1000px;
+    margin: 0 auto 0;
+    padding-top: 65px;
+  }
   
-}
-
-Button:hover {
-  background-color: #599B84;
-}
-
-footer {
-  font-size: 14px;
-  line-height: 28px;
-  font-family: 'Open Sans', sans-serif;
-  text-align: center;
-  margin-top: 80px;
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+  }
   
-}
+  ul {
+    display: flex;
+    list-style: none;
+    gap: 48px;
+    margin: 0;
+    padding: 0;
+  }
+  
+  a {
+    color: #1f1534;
+    text-decoration: none;
+  }
+  
+  ul li a {
+      opacity: 0.5;
+  }
+  
+  ul li a:hover {
+    font-weight: bold;
+    color: #1f1534;
+    opacity: 1;
+  }
+  
+  h1,
+  ul {
+    font-family: "Mulish", sans-serif;
+  }
+  
+  h1 {
+    font-size: 49px;
+    line-height: 56px;
+    color: #1f1534;
+    font-weight: normal;
+    width: 490px;
+  }
+  
+  h1 span {
+    color: #89c5cc;
+    font-weight: bold;
+  }
+   main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 65px;
+   }
 
-footer a {
-  font-weight: bold;
-}
+  section p {
+    font-size: 14px;
+    line-height: 28px;
+    color: #7d7987;
+    margin: 40px 0;
+  }
+  
+  button {
+    text-transform: uppercase;
+    color: white;
+    font-family: "Open Sans", sans-serif;
+    background: #69B99D;
+    border: none;
+    padding: 16px 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+      background: #4EA788;
+  }
+  
+  footer {
+    font-size: 14px;
+    line-height: 28px;
+  
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 80px;
+  }
+  
+  footer a {
+    font-weight: bold;
+  }
 
-footer a:hover {
-  color: #69B99D;
-}
-
-#balls {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-
-}
+  footer a:hover {
+    color: #4EA788;
+  }
+  
+  #balls {
+    position: fixed;
+      bottom: 0;
+      right: 0;
+  }
+  
